- Item Tabs are not localized to the left. #38 - Brokers: Item control agents are not localized #37

--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -409,6 +409,8 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <Resource Include="Images\de-DE.png" />
+    <Resource Include="Images\it-IT.png" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
