--- a/HelperModule/HelperModule.csproj
+++ b/HelperModule/HelperModule.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v17.1, Version=17.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpo.v17.1, Version=17.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Expression.Interactions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\src\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\Microsoft.Expression.Interactions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\src\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
@@ -162,8 +168,8 @@
     <Reference Include="System.Data.SqlXml" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\src\packages\Prism.Wpf.6.3.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\src\packages\System.Windows.Interactivity.WPF.2.0.20525\lib\net40\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xaml" />
@@ -179,13 +185,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelperModule.cs" />
-    <Compile Include="KarveDataServices\DataTransferObject\VehicleOwnerDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseHelperViewModel.cs" />
     <Compile Include="ViewModels\VehicleOwnerViewModel.cs" />
     <Compile Include="ViewModels\VehicleRepostajeReasonViewModel.cs" />
     <Compile Include="ViewModels\VehicleToolsViewModel.cs" />
     <Compile Include="ViewModels\VehicleTypesViewModel.cs" />
+    <Compile Include="Views\Behaviour\GridChangeSelectionBehaviour.cs" />
     <Compile Include="Views\HelperClientsSummary.xaml.cs">
       <DependentUpon>HelperClientsSummary.xaml</DependentUpon>
     </Compile>
@@ -195,6 +201,7 @@
     <Compile Include="Views\HelperVehiculesSummary.xaml.cs">
       <DependentUpon>HelperVehiculesSummary.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\MockViewModels\VehicleTypesMockViewModel.cs" />
     <Compile Include="Views\VehicleMantienanceCode.xaml.cs">
       <DependentUpon>VehicleMantienanceCode.xaml</DependentUpon>
     </Compile>
@@ -222,14 +229,12 @@
     <Compile Include="Views\VehicleRepostajeReason.xaml.cs">
       <DependentUpon>VehicleRepostajeReason.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\VehicleTools.xaml.cs">
-      <DependentUpon>VehicleTools.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\VehicleTypes.xaml.cs">
       <DependentUpon>VehicleTypes.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -281,16 +286,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\VehicleTools.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Views\VehicleTypes.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\AttachedProperty\" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\exitmodule.jpg" />
   </ItemGroup>
@@ -316,6 +319,10 @@
     <ProjectReference Include="..\src\KarveCommon\KarveCommon.csproj">
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\src\Modules\DALModule\KarveDataAccessLayer.csproj">
+      <Project>{140c1044-4f56-4855-af52-a2f91b369460}</Project>
+      <Name>KarveDataAccessLayer</Name>
     </ProjectReference>
     <ProjectReference Include="..\src\Modules\DALModule\KarveDataServices\KarveDataServices.csproj">
       <Project>{83407587-1785-481b-a4fb-23e035173190}</Project>
