--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -188,6 +188,10 @@
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCommon</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\src\KarveLocale\KarveLocale.csproj">
+      <Project>{d1d7504f-994c-42fb-a78f-b6078f460f7f}</Project>
+      <Name>KarveLocale</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\Modules\DALModule\KarveDataAccessLayer.csproj">
       <Project>{140c1044-4f56-4855-af52-a2f91b369460}</Project>
       <Name>KarveDataAccessLayer</Name>
@@ -195,6 +199,10 @@
     <ProjectReference Include="..\..\..\src\Modules\DALModule\KarveDataServices\KarveDataServices.csproj">
       <Project>{83407587-1785-481b-a4fb-23e035173190}</Project>
       <Name>KarveDataServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Modules\HelperModule\HelperModule.csproj">
+      <Project>{4eaa0821-1dcd-4e61-ba42-05bfd973a399}</Project>
+      <Name>HelperModule</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\src\Modules\MasterModule\MasterModule.csproj">
       <Project>{59b99363-3561-4b1f-94fb-136becbaa675}</Project>
